# tap-wikipedia

./: .gitignore  LICENSE  README.md  featured_articles_cache.sqlite  meltano.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: continuous-integration.yml
config/: test.config.json  wikipedia.config.json
script/: cibuild  test
tap_wikipedia/: __init__.py  constants.py  tap.py  wikipedia_abstracts_stream.py  wikipedia_stream.py  wikipedia_streams.py
tap_wikipedia/models/: __init__.py  config.py  wiki_subdirectory.py  wikipedia_title_prefix.py  wikipedia_url.py
tap_wikipedia/models/types/: __init__.py  abstract.py  category_string_type.py  enrichment_type.py  external_link_string_type.py  image_url.py  non_blank_string.py  stripped_string.py  sublink_string_type.py  subset_specification.py  title.py  web_page_url.py
tap_wikipedia/models/wikipedia/: __init__.py  abstract.py  abstract_info.py  category.py  external_link.py  record.py  sublink.py
tap_wikipedia/utils/: __init__.py  file_cache.py  pipe.py  wikipedia_abstracts_parser.py
tests/: __init__.py  test_core.py
