[tool.poetry]
name = "tap-wikipedia"
version = "0.0.1"
description = "`tap-wikipedia` is a Singer tap for wikipedia, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Kweku A. Ninsin"]
keywords = [
    "ELT",
    "wikipedia",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
singer-sdk = "^0.31.1"
pathvalidate = "^3.2.0"
appdirs = "^1.4.4"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.3.0"
requests-cache = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
singer-sdk = { version="^0.31.1", extras = ["testing"] }
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
types-appdirs = "^1.4.3.5"
types-beautifulsoup4 = "^4.12.0.5"
meltano = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-wikipedia = 'tap_wikipedia.tap:Tapwikipedia.cli'
